add vercel json. opengraph metas

--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="mobile-web-app-capable" content="yes" />
-        <meta property="og:title" content="Justas Dovydaitis - Developer" />
-        <meta
-            property="og:description"
-            content="This is my resume"
-        />
-        <meta
-            property="og:image"
-            content="./static/media/portrait-michael.e0fc91ce.jpg"
-        />
-        <meta
-            property="og:url"
-            content="http://justas-dovydaitis.vercel.app"
-        />
+        <!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://justas-dovydaitis.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Justas Dovydaitis - Developer">
+<meta property="og:description" content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job.">
+<meta property="og:image" content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="justas-dovydaitis.vercel.app">
+<meta property="twitter:url" content="https://justas-dovydaitis.vercel.app/">
+<meta name="twitter:title" content="Justas Dovydaitis - Developer">
+<meta name="twitter:description" content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job.">
+<meta name="twitter:image" content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg">
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job."
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
