--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,63 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="mobile-web-app-capable" content="yes" />
         <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://justas-dovydaitis.vercel.app/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Justas Dovydaitis - Developer">
-<meta property="og:description" content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job.">
-<meta property="og:image" content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg">
+        <meta
+            property="og:url"
+            content="https://justas-dovydaitis.vercel.app/"
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Justas Dovydaitis - Developer" />
+        <meta
+            property="og:description"
+            content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job."
+        />
+        <meta
+            property="og:image"
+            content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg"
+        />
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="justas-dovydaitis.vercel.app">
-<meta property="twitter:url" content="https://justas-dovydaitis.vercel.app/">
-<meta name="twitter:title" content="Justas Dovydaitis - Developer">
-<meta name="twitter:description" content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job.">
-<meta name="twitter:image" content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg">
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:domain"
+            content="justas-dovydaitis.vercel.app"
+        />
+        <meta
+            property="twitter:url"
+            content="https://justas-dovydaitis.vercel.app/"
+        />
+        <meta name="twitter:title" content="Justas Dovydaitis - Developer" />
+        <meta
+            name="twitter:description"
+            content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job."
+        />
+        <meta
+            name="twitter:image"
+            content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg"
+        />
         <meta
             name="description"
             content="I am a full-stack developer. Currently freelancing and looking for an interesting project or a full-time front-end developer job."
