Updated opengraph urls

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <!-- Facebook Meta Tags -->
         <meta
             property="og:url"
-            content="https://justas-dovydaitis.vercel.app/"
+            content="https://justas-dovydaitis.lt/"
         />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Justas Dovydaitis - Developer" />
@@ -37,18 +37,18 @@
         />
         <meta
             property="og:image"
-            content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg"
+            content="https://justas-dovydaitis.lt/static/media/portrait-michael.e0fc91ce.jpg"
         />
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta
             property="twitter:domain"
-            content="justas-dovydaitis.vercel.app"
+            content="justas-dovydaitis.lt"
         />
         <meta
             property="twitter:url"
-            content="https://justas-dovydaitis.vercel.app/"
+            content="https://justas-dovydaitis.lt/"
         />
         <meta name="twitter:title" content="Justas Dovydaitis - Developer" />
         <meta
@@ -57,7 +57,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://justas-dovydaitis.vercel.app./static/media/portrait-michael.e0fc91ce.jpg"
+            content="https://justas-dovydaitis.lt/static/media/portrait-michael.e0fc91ce.jpg"
         />
         <meta
             name="description"
